--- a/package.json
+++ b/package.json
@@ -4,13 +4,37 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.0",
+    "@types/material-ui": "^0.21.5",
     "@types/node": "10.12.21",
-    "@types/react": "16.8.2",
-    "@types/react-dom": "16.8.0",
+    "@types/nprogress": "^0.0.29",
+    "@types/react-redux-i18n": "^0.0.11",
+    "@types/react-redux-toastr": "^7.4.1",
+    "@types/react-router": "^4.4.3",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^5.0.17",
+    "@types/react-scroll": "^1.5.4",
+    "@types/redux": "^3.6.0",
+    "@types/redux-form": "^7.4.16",
+    "connected-react-router": "^6.2.2",
+    "history": "^4.7.2",
+    "material-ui": "^0.20.2",
+    "material-ui-pickers": "^2.2.0",
+    "nprogress": "^0.2.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-placeholder": "^3.0.1",
+    "react-redux": "^6.0.0",
+    "react-redux-i18n": "^1.9.3",
+    "react-redux-toastr": "^7.4.7",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.3",
-    "typescript": "3.3.3"
+    "react-scroll": "^1.7.10",
+    "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
+    "redux-thunk": "^2.3.0",
+    "typescript": "3.3.3",
+    "typescript-fsa": "^3.0.0-beta-2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,5 +50,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
+    "@types/react-redux": "^7.0.1"
+  }
 }
