--- a/package.json
+++ b/package.json
@@ -3,18 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.0",
-    "@types/material-ui": "^0.21.5",
-    "@types/node": "10.12.21",
-    "@types/nprogress": "^0.0.29",
-    "@types/react-redux-i18n": "^0.0.11",
-    "@types/react-redux-toastr": "^7.4.1",
-    "@types/react-router": "^4.4.3",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-router-redux": "^5.0.17",
-    "@types/react-scroll": "^1.5.4",
-    "@types/redux": "^3.6.0",
-    "@types/redux-form": "^7.4.16",
     "connected-react-router": "^6.3.0",
     "history": "^4.7.2",
     "material-ui": "^0.20.2",
@@ -27,7 +15,6 @@
     "react-redux-i18n": "^1.9.3",
     "react-redux-toastr": "^7.4.7",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.3",
     "react-scroll": "^1.7.10",
     "redux": "^4.0.1",
@@ -54,6 +41,18 @@
   "devDependencies": {
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
-    "@types/react-redux": "^7.0.1"
+    "@types/react-redux": "^7.0.1",
+    "@types/jest": "24.0.0",
+    "@types/material-ui": "^0.21.5",
+    "@types/node": "10.12.21",
+    "@types/nprogress": "^0.0.29",
+    "@types/react-redux-i18n": "^0.0.11",
+    "@types/react-redux-toastr": "^7.4.1",
+    "@types/react-router": "^4.4.3",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^5.0.17",
+    "@types/react-scroll": "^1.5.4",
+    "@types/redux": "^3.6.0",
+    "@types/redux-form": "^7.4.16"
   }
 }
