--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
     "connected-react-router": "^6.3.0",
+    "express": "^4.16.4",
     "history": "^4.7.2",
     "material-ui": "^0.20.2",
     "material-ui-pickers": "^2.2.0",
+    "mongoose": "^5.4.11",
+    "mongoose-paginate": "^5.0.3",
     "nprogress": "^0.2.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
@@ -27,8 +31,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server"
   },
+  "proxy": "http://localhost:4000",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -39,13 +45,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react": "^16.8.2",
-    "@types/react-dom": "^16.8.0",
-    "@types/react-redux": "^7.0.1",
     "@types/jest": "24.0.0",
     "@types/material-ui": "^0.21.5",
     "@types/node": "10.12.21",
     "@types/nprogress": "^0.0.29",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
+    "@types/react-redux": "^7.0.1",
     "@types/react-redux-i18n": "^0.0.11",
     "@types/react-redux-toastr": "^7.4.1",
     "@types/react-router": "^4.4.3",
