--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-ui-pickers": "^2.2.0",
     "mongoose": "^5.4.11",
     "mongoose-paginate": "^5.0.3",
+    "nodemon": "^1.18.10",
     "nprogress": "^0.2.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
@@ -32,7 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server"
+    "server": "nodemon server",
+    "both": "npm run start && npm run server"
   },
   "proxy": "http://localhost:4000",
   "eslintConfig": {
