--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "body-parser": "^1.18.3",
     "connected-react-router": "^6.3.0",
     "express": "^4.16.4",
     "history": "^4.7.2",
-    "material-ui": "^0.20.2",
     "material-ui-pickers": "^2.2.0",
     "mongoose": "^5.4.11",
     "mongoose-paginate": "^5.0.3",
