--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "typescript": "3.3.3",
     "typescript-fsa": "^3.0.0-beta-2"
   },
@@ -62,6 +64,7 @@
     "@types/react-router-redux": "^5.0.17",
     "@types/react-scroll": "^1.5.4",
     "@types/redux": "^3.6.0",
-    "@types/redux-form": "^7.4.16"
+    "@types/redux-form": "^7.4.16",
+    "@types/socket.io-client": "^1.4.32"
   }
 }
