--- a/client/package.json
+++ b/client/package.json
@@ -36,12 +36,14 @@
     "start": "PORT=9000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "nodemon server"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "@types/jest": "24.0.0",
     "@types/material-ui": "^0.21.5",
+    "@types/mongoose": "^5.5.0",
+    "@types/mongoose-paginate": "^5.0.6",
     "@types/node": "10.12.21",
     "@types/nprogress": "^0.0.29",
     "@types/react": "^16.8.2",
@@ -55,7 +57,9 @@
     "@types/react-scroll": "^1.5.4",
     "@types/redux": "^3.6.0",
     "@types/redux-form": "^7.4.16",
-    "@types/socket.io-client": "^1.4.32"
+    "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32",
+    "ts-node": "^8.1.0"
   },
   "proxy": "http://localhost:4000",
   "eslintConfig": {
