--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/mongoose": "^5.5.0",
     "@types/mongoose-paginate": "^5.0.6",
     "@types/socket.io": "^2.1.2",
+    "nodemon": "^1.19.0",
     "typescript": "^3.4.5"
   },
   "dependencies": {
