--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --config nodemon.json"
+    "start": "nodemon --config nodemon.json",
+    "base64": "ts-node ./scripts/serviceAccountInBase64.ts",
+    "compressed": "ts-node ./scripts/serviceAccountCompressed.ts"
   },
   "author": "",
   "license": "ISC",
@@ -20,9 +22,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "firebase-admin": "^8.2.0",
     "mongoose": "^5.5.7",
     "mongoose-paginate": "^5.0.3",
     "socket.io": "^2.2.0",
-    "ts-node": "^8.1.0"
+    "ts-node": "^8.1.0",
+    "zlib": "^1.0.5"
   }
 }
