--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "connected-react-router": "^6.3.0",
     "express": "^4.16.4",
+    "firebase": "^6.3.0",
     "history": "^4.7.2",
     "material-ui-pickers": "^2.2.0",
     "mongoose": "^5.4.11",
